[gd_scene load_steps=25 format=3 uid="uid://rpey3nq236le"]

[ext_resource type="Script" path="res://Scripts/rifle.gd" id="1_075jv"]
[ext_resource type="Texture2D" uid="uid://crdq4ddo75u28" path="res://Assets/Weapons/Assault_rifle_V1.00/WEAPON/[SINGLE_SHOT] Assault_rifle_V1.00.png" id="1_sdd5f"]
[ext_resource type="Texture2D" uid="uid://cxatdlxifijuf" path="res://Assets/Objects/tank_arrowFull.png" id="2_88y8e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6cyli"]
atlas = ExtResource("1_sdd5f")
region = Rect2(0, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbun5"]
atlas = ExtResource("1_sdd5f")
region = Rect2(128, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwu5l"]
atlas = ExtResource("1_sdd5f")
region = Rect2(256, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oghu"]
atlas = ExtResource("1_sdd5f")
region = Rect2(384, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyp8s"]
atlas = ExtResource("1_sdd5f")
region = Rect2(512, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_npfal"]
atlas = ExtResource("1_sdd5f")
region = Rect2(640, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axmov"]
atlas = ExtResource("1_sdd5f")
region = Rect2(768, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36vy0"]
atlas = ExtResource("1_sdd5f")
region = Rect2(896, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp844"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1024, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32dej"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1152, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5i0"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1280, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11f2f"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1408, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7ci"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1536, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfa3c"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1664, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k5jd"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1792, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31g7q"]
atlas = ExtResource("1_sdd5f")
region = Rect2(1920, 0, 128, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_fluyv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cyli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbun5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwu5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oghu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyp8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npfal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axmov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36vy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp844")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32dej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11f2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfa3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k5jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31g7q")
}],
"loop": false,
"name": &"default",
"speed": 60.0
}]

[sub_resource type="Animation" id="Animation_0y10n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_u67qg"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.2, 0.06)]
}

[sub_resource type="Animation" id="Animation_bohev"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxdq5"]
_data = {
"RESET": SubResource("Animation_0y10n"),
"muzzle_flash": SubResource("Animation_u67qg"),
"reload": SubResource("Animation_bohev")
}

[node name="Rifle" type="Node2D"]
script = ExtResource("1_075jv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fluyv")
frame = 15
frame_progress = 1.0
offset = Vector2(40, 0)

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(70, -6)
rotation = 3.14159
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_88y8e")

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(63, -6)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(68, -6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xxdq5")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
